# encuentro-2026-bahia

./: README.md  customNewton.py  harm_osc_system_jax.py  harm_osc_system_sympy.py  harmonic_oscillator.py  pyproject.toml
